tests/flat_file/ui/auto_plugin_default_wrong_first_param.rs
use bevy_auto_plugin::flat_file::prelude::*;

#[auto_plugin]
fn plugin(_: bool) {}

// dummy main
fn main() {}
